--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+ <!-- navbar start -->
     <div class="nav-btn">
     <label for="nav-check">
         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f53b57"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
@@ -32,5 +34,18 @@
     </ul>
     
 </nav>
+
+<!-- navbar end -->
+
+<!-- Header start -->
+    <header class="header">
+    <div class="banner">
+        <h2>Discover The Secret To Taste</h2>
+        <h1>Tender Friend Chicken</h1>
+        <a class="btn banner-btn" >View More</a>
+    </div>
+    </header>
+
+<!-- Header end -->
 </body>
 </html>
