--- a/index.html
+++ b/index.html
@@ -47,5 +47,38 @@
     </header>
 
 <!-- Header end -->
+    <div class="content-divider"></div>
+<!-- --------Features start---------- -->
+ <section class="features clearfix">
+    <div class="feature">
+        <span class="feature-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z"/></svg>
+        </span>
+        <h4 class="feature-title">Made With Love</h4>
+        <p class="feature-text">Discover hearfelt hospitality in our cozy, lovingly accommodations.</p>
+    </div>
+    <div class="feature">
+        <span class="feature-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M300-120 140-280l56-56 64 63v-247H120q-33 0-56.5-23.5T40-600v-240h80v240h140q33 0 56.5 23.5T340-520v247l63-63 57 56-160 160Zm360 0L500-280l56-56 64 63v-247q0-33 23.5-56.5T700-600h140v-240h80v240q0 33-23.5 56.5T840-520H700v248l63-64 57 56-160 160Z"/></svg>
+        </span>
+        <h4 class="feature-title">Taste</h4>
+        <p class="feature-text">Savor the love in every bite of our exquisite, crafted cuisine.</p>
+    </div>
+    <div class="feature">
+        <span class="feature-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M300-120 140-280l56-56 64 63v-247H120q-33 0-56.5-23.5T40-600v-240h80v240h140q33 0 56.5 23.5T340-520v247l63-63 57 56-160 160Zm360 0L500-280l56-56 64 63v-247q0-33 23.5-56.5T700-600h140v-240h80v240q0 33-23.5 56.5T840-520H700v248l63-64 57 56-160 160Z"/></svg>
+        </span>
+        <h4 class="feature-title">Energy</h4>
+        <p class="feature-text">Feel the vibrant energy and warmth in our welcomin, lively atmosphere.</p>
+    </div>
+    <div class="feature">
+        <span class="feature-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M300-120 140-280l56-56 64 63v-247H120q-33 0-56.5-23.5T40-600v-240h80v240h140q33 0 56.5 23.5T340-520v247l63-63 57 56-160 160Zm360 0L500-280l56-56 64 63v-247q0-33 23.5-56.5T700-600h140v-240h80v240q0 33-23.5 56.5T840-520H700v248l63-64 57 56-160 160Z"/></svg>
+        </span>
+        <h4 class="feature-title">Family Receipe</h4>
+        <p class="feature-text">Enjoy our family recipes, lovingly crafted for a taste of tradition.</p>
+    </div>
+ </section>
+<!-- ---------Features end------------- -->
 </body>
 </html>
